    * Conary recipes can now directly reference source code through
      version control systems.  The new r.addMercurialSnapshot(),
      r.addCvsSnapshot(), and r.addSvnSnapshot() source actions
      check out repositories and package snapshots.  They are
      integrated with the "cvc refresh" command for fetching more
      recent source code from version control repositories. (CNY-1)

Changes in 1.1.22:
  o Major Changes:
    * Group troves can now declare an (integer) compatibility class
      which is used to automatically invalidate rollbacks (existing
      groups are considered to be in compatibility class zero). When a
      group is upgraded to a new group which has a different
      compatibility class, the rollback stack is invalidated unless
      the group also contains postRollback script which can rollback
      to the version being updated. Postrollback scripts can now be
      defined with a list of compatibility versions they are able to
      roll back to. Old invalidateRollback parameter for some group
      scripts is no longer supported.

  o Client Changes:
    * To take advantage of Conary's ability to apply the critical
      update set and restart before applying the rest of the updates,
      three new API calls have been added: newUpdateJob,
      prepareUpdateJob and applyUpdateJob. (CNY-1454)
    * A new argument, --no-restart, has been added to conary. This has
      to be used in conjunction with --root and allows one to skip the
      restarts after applying critical updates when installing in a
      chroot. (CNY-1458)
    * Proxy configuration parameter is now of the form 'proxy protocol
      url' (i.e. 'proxy http http://proxy.some.com'), and allows
      separate proxies to be configured for http and https. If old
      'proxy url' form is used, separate proxies are configured for
      http and https rather than a single proxy being using for both
      protocols. Users who need the old behavior should set explicit